bynkc/tests/fixtures/positive/234_http_streamed_response/src/feed.bynk
context feed

service Feed from http {
  -- A streamed 200 body (SSE), consuming the Stream[T] primitive.
  on GET("/ticks") by v: Visitor () -> Effect[HttpResult[()]] {
    Streaming(Stream.of(["tick-1", "tick-2", "tick-3"]).take(3))
  }

  -- Streaming (200) and a pre-stream failure coexist in one handler — both are
  -- HttpResult[()], so no type conflict (real-time track slice 1, DECISION B).
  on GET("/feed/:mode") by v: Visitor (mode: String) -> Effect[HttpResult[()]] {
    if mode == "live" {
      Streaming(Stream.of(["a", "b", "c"]).map((s) => s).take(2))
    } else {
      NotFound
    }
  }
}
